<resources>
    <string name="appName">SET</string>
    <string name="setCardGameText">SET Card Game</string>
    <string name="exitBtn">Exit</string>
    <string name="scoreboardText">Scoreboard</string>
    <string name="singleplayerText">Singleplayer</string>
    <string name="multiplayerText">Multiplayer</string>
    <string name="registerText">Register</string>
    <string name="loginText">Login</string>
    <string name="timerTextView">0:00</string>
    <string name="pointTextView">0</string>
    <string name="scoreTextView">SCORE</string>
    <string name="scoreText">Score</string>
    <string name="myScoreText">My Scores</string>
    <string name="ownText">Own</string>
    <string name="yourScore">You</string>
    <string name="rank">Rank</string>
    <string name="points">Points</string>
    <string name="time">Time</string>
    <string name="contentDescriptionForCards">card</string>
    <string name="newGameBtn">New Game</string>
    <string name="backToMenuBtn">Menu</string>
    <string name="howToText">The goal of SET: Find 3 cards that together form a SET.\n\nSET rule:\n• Every property (shape, color, number) must either be the same on all 3 cards, or all different.\n\nExamples:\n• 3 cards with same shape, but different colors and different numbers\n• 3 cards with different shapes, different colors and different numbers\n• 3 cards with same shape, same color, but different numbers\n\nGame: Find 3 cards that together form a SET!</string>
    <string name="howToTitle">How To Play</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="difficultyTextView">NORMAL</string>
    <string name="randomGameBtn">Random Game</string>
    <string name="privateGameText">Private Game</string>
    <string name="createPrivateGameText">Create Private Game</string>
    <string name="chooseMultiTypeText">Choose Multiplayer Type</string>
    <string name="multiTypeText">Multiplayer Type</string>
    <string name="connectionTextTV">CONNECTION CODE</string>
    <string name="waitingTV">SEARCHING FOR GAME</string>
    <string name="waitingText">Searching For Game</string>
    <string name="stopWaitingBtn">STOP SEARCHING</string>
    <string name="deletePrivateGameBtn">DELETE GAME</string>
    <string name="joinGameBtn">Join Game</string>
    <string name="createGameBtn">Create Game</string>
    <string name="joinWithCodeBtn">Join</string>
    <string name="joinGameText">Join Game</string>
    <string name="enterConnectionCodeText">ENTER CONNECTION CODE</string>
    <string name="worldScoresText">World Scores</string>
    <string name="backBtn">Back</string>
    <string name="won">WON</string>
    <string name="lost">LOST</string>
    <string name="draw">DRAW</string>
    <string name="meText">Me:</string>
    <string name="opponentText">Opponent:</string>
    <string name="difficulty">Difficulty</string>
    <string name="timeText">Time</string>
    <string name="pointsText">Points</string>
    <string name="cantGetScores">Failed to retrieve results</string>
    <string name="serverUnavailable">Server is unavailable</string>
    <string name="loading">Loading</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="badCredentials">Invalid username or password</string>
    <string name="accountError">Login failed</string>
    <string name="internalServerError">Internal server error</string>
    <string name="invalidParameters">Invalid parameters</string>
    <string name="authentication">Authentication</string>
    <string name="takenUsername">Username is already taken</string>
</resources>