<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.EndGameScreenActivity"
    android:background="@drawable/set_background">

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="2"
        android:text="@string/scoreTextView"
        android:textColor="@color/blue"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <View
        android:id="@+id/view"
        android:layout_width="255dp"
        android:layout_height="220dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView"
        app:layout_constraintVertical_bias="0.097">


    </View>

    <View
        android:id="@+id/view2"
        android:layout_width="255dp"
        android:layout_height="298dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/difficultyTextView"
        android:textColor="@color/blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/finalPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pointTextView"
        android:textColor="@color/blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalTimeTextView"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/finalTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/timerTextView"
        android:textColor="@color/blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTextView"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="newSingleplayerGame"
        android:text="@string/newGameBtn"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/goToScoreBoardBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:onClick="switchToScoreboard"
        android:text="@string/scoreboardText"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToMenuBtn"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/backToMenuBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:onClick="backToMenu"
        android:text="@string/backToMenuBtn"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameBtn"
        app:layout_constraintVertical_bias="0.225" />

</androidx.constraintlayout.widget.ConstraintLayout>