<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.MainActivity"
    android:background="@drawable/set_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="3"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <View
        android:id="@+id/view"
        android:layout_width="271dp"
        android:layout_height="417dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/scoreboardBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToScoreboard"
        android:text="@string/scoreboardText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplayerBtn"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/singleplayerBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToDifficulty"
        android:text="@string/singleplayerText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/multiplayerBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToMultiplayer"
        android:text="@string/multiplayerText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleplayerBtn"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/howToBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToHowToPage"
        android:text="@string/howToTitle"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreboardBtn"
        app:layout_constraintVertical_bias="0.506" />

</androidx.constraintlayout.widget.ConstraintLayout>