<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.multiplayer.SelectMultiplayerTypeActivity"
    android:background="@drawable/set_background">

    <TextView
        android:id="@+id/chooseMultiTypeTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="2"
        android:text="@string/multiTypeText"
        android:textColor="@color/blue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <View
        android:id="@+id/view"
        android:layout_width="267dp"
        android:layout_height="237dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <Button
        android:id="@+id/randomGameBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToRandomGame"
        android:text="@string/randomGameBtn"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.231" />

    <Button
        android:id="@+id/privateGameBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToPrivateGame"
        android:text="@string/privateGameText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomGameBtn"
        app:layout_constraintVertical_bias="0.46" />

</androidx.constraintlayout.widget.ConstraintLayout>