<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/set_background"
    tools:context=".viewmodel.scoreboard.ScoreboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/set_background">

    <TextView
        android:id="@+id/scoreboardTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="2"
        android:text="@string/scoreboardText"
        android:textColor="@color/blue"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <View
        android:id="@+id/view"
        android:layout_width="266dp"
        android:layout_height="236dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/worldScoreBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToWorldScores"
        android:text="@string/worldScoresText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myScoreBtn"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/myScoreBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:onClick="switchToMyScores"
        android:text="@string/myScoreText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.221" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>