<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/set_background"
    tools:context=".viewmodel.RegisterActivity">

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="2"
        android:text="@string/registerText"
        android:textColor="@color/blue"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <View
        android:id="@+id/view"
        android:layout_width="263dp"
        android:layout_height="374dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:text="@string/registerText"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text="@string/usernameText"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/archivo_black"
        android:gravity="center"
        android:text="@string/passwordText"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>